polish Makefile, studied structure

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,16 +6,17 @@
 #    By: sbenes <sbenes@student.42prague.com>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/04/24 15:29:04 by sbenes            #+#    #+#              #
-#    Updated: 2023/05/30 12:00:18 by sbenes           ###   ########.fr        #
+#    Updated: 2023/06/06 16:23:12 by sbenes           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 
 #color and formatting definitions:
-BOLD =	\033[1m
-GREEN =	\033[32m
-RED =	\033[31m
-NC =	\033[0m
+BOLD =		\033[1m
+GREEN =		\033[32m
+RED =		\033[31m
+YELONBLK = 	\033[1;93;40m
+NC =		\033[0m
 
 #name
 NAME = 		philo
@@ -28,9 +29,7 @@ CFLAGS =	-Wall -Wextra -Werror
 INC = -I philosophers.h
 	
 #sources
-SRC = 	main.c init_args.c utils.c error.c utils_time.c routine.c actions.c
-
-#objects
+SRC = 	main.c init_args.c utils.c error.c 
 OBJ =		$(SRC:.c=.o)
 
 all: $(NAME)
@@ -40,11 +39,16 @@ $(NAME): $(OBJ)
 	@$(CC) $(CFLAGS) -o $(NAME) $(OBJ) $(INC)
 	@echo "$(BOLD)$(GREEN)[ 🪄 Program ready! ]$(NC)"
 	@echo ""
-	@echo "$(BOLD)[ -- Welcome to Philosophers -- ]$(NC)"
-	@echo ""
-	@echo "$(BOLD)run ./philo <n_of_philos> <time_to_die> <time_to_eat> <time_to_sleep> <opt:n_of_meals_each_philo_needs_to_eat>$(NC)"
-	@echo ""
-	@echo "[ -- Have fun ! 😉 -- ]"
+	@echo "$(YELONBLK)$(BOLD)                                                         $(NC)"
+	@echo "$(YELONBLK)$(BOLD)  ______ _     _ _                 _                     $(NC)"
+	@echo "$(YELONBLK)$(BOLD)  | ___ \ |   (_) |               | |                    $(NC)"
+	@echo "$(YELONBLK)$(BOLD)  | |_/ / |__  _| | ___  ___ _ __ | |__   ___ _ __ ___   $(NC)"
+	@echo "$(YELONBLK)$(BOLD)  |  __/| '_ \| | |/ _ \/ __| '_ \| '_ \ / _ \ '__/ __|  $(NC)"
+	@echo "$(YELONBLK)$(BOLD)  | |   | | | | | | (_) \__ \ |_| | | | |  __/ |  \__ \  $(NC)"
+	@echo "$(YELONBLK)$(BOLD)  \_|   |_| |_|_|_|\___/|___/ .__/|_| |_|\___|_|  |___/  $(NC)"
+	@echo "$(YELONBLK)$(BOLD)                            | |                          $(NC)"
+	@echo "$(YELONBLK)$(BOLD)                            |_|  ...wanna spaghetti? 🍝  $(NC)"
+	@echo "$(YELONBLK)$(BOLD)                                                         $(NC)"
 	@echo ""
 
 $(OBJ): %.o: %.c
@@ -56,7 +60,7 @@ clean:
 	@echo "$(BOLD)$(RED)[ 🔥 Purging object files ]$(NC)"
 	@rm -f $(OBJ)
 
-fclean:
+fclean: clean
 	@echo "$(BOLD)$(RED)[ 🔥 Removing program ]$(NC)"
 	@rm -f $(NAME)
 
